<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.aclrian.messdiener</groupId>
	<artifactId>messdienerplan-ersteller</artifactId>
	<version>b699</version>
<!-- Remember the fat jar comment-->
<properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
</properties>

	<dependencies>
	<!-- JavaFx -->
	 	<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>11.0.2</version>
  		</dependency>
  		<dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
			  <groupId>org.openjfx</groupId>
			  <artifactId>javafx-base</artifactId>
			  <version>11.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>11.0.2</version>
		<!--FAT_JAR ONLY	<classifier>win</classifier>-->
		</dependency>
	<!--	<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>11.0.2</version>
			<classifier>linux</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>11.0.2</version>
			<classifier>mac</classifier>
		</dependency>-->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>11.0.1</version>
		</dependency>
		<!--Zum Lesen der Version von Github https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
			<exclusions>
				<exclusion>
					<artifactId>hamcrest-core</artifactId>
					<groupId>org.hamcrest</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.9</version>
		</dependency>
		<dependency>
			<!-- for email verification -->
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.4.1</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>html2pdf</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
		</dependency>
		<!--word-->
		<!-- https://mvnrepository.com/artifact/org.docx4j/docx4j-ImportXHTML -->
		<dependency>
			<groupId>org.docx4j</groupId>
			<artifactId>docx4j-ImportXHTML</artifactId>
			<!--Can't extract module name from xalan-metainf-8.0.0.jar: Provider class org.docx4j.org.apache.xpath.jaxp.XPathFactoryImpl not in module-->
			<exclusions><exclusion><groupId>org.docx4j.org.apache</groupId>
				<artifactId>xalan-metainf</artifactId></exclusion></exclusions>
			<version>8.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.docx4j</groupId>
			<artifactId>docx4j-JAXB-ReferenceImpl</artifactId>
			<version>8.0.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.0-b170127.1453</version>
		</dependency>
		<!--Get version from pom-->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model</artifactId>
			<version>3.3.9</version>
		</dependency>
		<!-- URI encode -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>5.2.5.RELEASE</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
		        <groupId>org.openjfx</groupId>
		        <artifactId>javafx-maven-plugin</artifactId>
		        <version>0.0.4</version>
		        <configuration>
		        <options>
					<option>--add-opens</option>
					<option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
               </options>
		            <mainClass>net.aclrian.mpe.Main</mainClass>
					<commandlineArgs>-exe</commandlineArgs>
					<includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
		        </configuration>
				<executions>
					<execution>
					<id>default-cli</id>
					<configuration>
						<commandlineArgs>-exe</commandlineArgs>
					</configuration>
				</execution>
				<execution>
					<id>debug</id>
					<configuration>
						<commandlineArgs>-exe</commandlineArgs>
						<options>
							<option>--add-opens</option>
							<option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
							<option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
							</options>
					</configuration>
				</execution>
			</executions>
			</plugin>
			        <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>net.aclrian.mpe.Main</mainClass>
            </manifest>
              <manifestEntries>
                    <Class-Path>.</Class-Path>
                </manifestEntries>
          </archive>
        </configuration>
      </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<testSource>1.8</testSource>
					<testTarget>1.8</testTarget>
					<compilerArgument>-Xlint:unchecked</compilerArgument>
					<compilerArgument>-Xlint:deprecation</compilerArgument>
				</configuration>
			</plugin>
            </plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>
</project>